<resources>
    <string name="app_name">TrackMe</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="user_login">USER LOGIN</string>
    <string name="business_login">BUSINESS LOGIN</string>
    <string name="register_here">Register Here.</string>
    <string name="track_me_user_logo">TrackMe user logo</string>
    <string name="track_me_business_logo">TrackMe business logo</string>
    <string name="email_is_not_valid">E-mail is not valid</string>
    <string name="you_are_a_third_party_customer_login_here">You are a third party customer? <u>Login Here.</u></string>
    <string name="menu_message">Request</string>
    <string name="menu_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_profile">Profile</string>
    <string name="toolbar_menu_home">HOME</string>
    <string name="toolbar_menu_request">REQUEST</string>
    <string name="menu_action_logout">Logout</string>
    <string name="home_check_your_status">CHECK YOUR STATUS</string>
    <string name="home_welcome_to_data4help">Welcome to Data4Help</string>
    <string name="home_fragment_pulse">Pulse:</string>
    <string name="home_fragment_blood_pressure">Blood Pressure:</string>
    <string name="toolbar_menu_history">HISTORY</string>
    <string name="button_accept">ACCEPT</string>
    <string name="button_refuse">REFUSE</string>
    <string name="request_title_message_body">MESSAGE BODY</string>
    <string name="request_body_send_by">Send by:</string>
    <string name="request_body_period">Period:</string>
    <string name="registration_title">REGISTRATION</string>
    <string name="register_toolbar_user">USER</string>
    <string name="register_toolbar_third_party">THIRD PARTY</string>
    <string name="register_toolbar_company">COMPANY</string>
    <string name="register_ssn">SSN</string>
    <string name="register_first_name">First name</string>
    <string name="register_last_name">Last name</string>
    <string name="register_birth_date">Birth timestamp</string>
    <string name="register_birth_city">Birth city</string>
    <string name="register_birth_nation">Birth nation</string>
    <string name="register_button">REGISTER</string>
    <string name="register_e_mail">E-mail</string>
    <string name="register_address">Address</string>
    <string name="register_duns_number">Duns number</string>
    <string name="register_company_name">Company name</string>
    <string name="ssn_example_aaa_gg_ssss">AAA-GG-SSSS</string>
    <string name="date_example_mm_gg_yyyy">MM/GG/YYYY</string>
    <string name="request_form_motive">Motive</string>
    <string name="request_form_end_date">End Date:</string>
    <string name="request_form_start_date">Start Date:</string>
    <string name="request_form_to">To:</string>
    <string name="notification_title">TrackMe Health Service</string>
    <string name="ticker_text">ticker_text</string>
    <string name="debug_tag">SOS_DEBUG</string>
    <string name="birth_year_key">birth_date_key</string>
    <string name="individual_request">INDIVIDUAL REQUEST</string>
    <string name="group_request">GROUP REQUEST</string>
    <string name="filter">Filter</string>
    <string name="aggregatorOperator">Aggregator:</string>
    <string name="type">type:</string>
    <string name="send_button">Send button</string>
    <string name="plus_button">Plus Button</string>
    <string name="remove_button">Remove button</string>
    <string name="message_image_list">Message image list</string>
    <string name="status">Status:</string>
    <string name="add_item_to_list_button">Add item to list button</string>
    <string name="heart_image">Heart image</string>
    <string name="history_item_image">history item image</string>
    <string name="download_file">Download file</string>
    <string name="visibility_off_button">Visibility off button</string>
    <string name="value">Value</string>
    <string name="file_download_image_button">File download image button</string>
    <string name="accept_term_and_condition">Accept <u>Term and Condition</u></string>
    <string name="health_channel_id">1338</string>
    <string name="health_channel_name">Service Notification Channel</string>
    <string name="location_notification_text">Location service is running…</string>
    <string name="location_channel_id">1339</string>
    <string name="location_channel_name">Location service channel</string>
    <string name="log_debug_bluetooth_existing">Bluetooth adapter existing</string>
    <string name="log_bluetooth_enabled">Bluetooth is enabled</string>
    <string name="log_cannot_parse_date">Could not parse timestamp due to timestamp format</string>
    <string name="make_call_error_invalid_data">Cannot make call due to invalid health data</string>
    <string name="make_call_error_no_number">Cannot make call due to no number available</string>
    <string name="make_call_error_no_permission">Cannot make call due to no permission (GPS)</string>
    <string name="make_call_error_no_gps">Cannot make call due to no GPS available</string>
    <string name="set_address">SET ADDRESS</string>
    <string name="make_call_error_due_to_thread">Cannot make call due to timeout exception (GPS or ROOM database)</string>
    <string name="notification_text">Health service is running…</string>
    <string name="b_o_l">B.O.L</string>
    <string name="location">Location service</string>
    <string name="health">Health service</string>
    <string name="stop_foreground">Stop foreground service</string>
    <string name="error_no_action">FATAL ERROR: No action passed</string>
    <string name="foreground_stop_toast_message">Foreground service stopped.</string>
    <string name="foreground_start_toast_message">Foreground service started.</string>
    <string name="geonames_org_url"><![CDATA[http://api.geonames.org/countryCode?lat=%s&lng=%s&username=%s]]></string>
    <string name="cannot_find_json_error">IO Exception, impossible to find the json file</string>
    <string name="creation_date">Creation Date</string>
    <string name="request_type">Request type</string>


    <!-- Error message. -->
    <string name="user_login_error">Username and password do not match.</string>
    <string name="business_login_error">E-mail and password do not match.</string>
    <string name="broadcast_receiver_error">Impossible to close the last view. Do you want to close the application?</string>
    <string name="fatal_error_title">FATAL ERROR</string>
    <string name="no_field_must_be_empty"> No field must be empty!</string>
    <string name="ssn_is_not_valid">Social security number is not valid!</string>
    <string name="username_is_too_long">Username is too long!</string>
    <string name="user_with_this_social_security_number_already_exist">User with this social security number already exist.</string>
    <string name="business_with_this_email_already_exist">Third party with this e-mail already exist.</string>
    <string name="download_file_error">Impossible to download file</string>
    <string name="block_third_party_message">Do you want to block this third party customer?</string>
    <string name="date_before_error">Hey! You have a temporal machine? The end timestamp is before te start timestamp!</string>
    <string name="terms_and_condition_error">"You must accept the Term and Condition of the software."</string>
    <string name="legal_note_show_error">"Impossible to show the legal note."</string>
    <string name="date_format_error">Date format error.</string>
    <string name="impossible_to_find_user_detail">Impossible found user detail.</string>
    <string name="connection_error">"Connection error."</string>
    <string name="request_not_well_formed">Request is not well formed.</string>
    <string name="make_call_error_due_to_threads">Make call error due to threads</string>
    <string name="third_party_is_block">Impossible to send a request for this user. You are blocked.</string>
    <string name="impossible_to_find_user">Impossible to find the user specified</string>

    <!-- DB -->
    <string name="persistent_database_name">trackme-db</string>


</resources>
