<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_action_logout" />

        <item
            android:id="@+id/location_switch"
            android:title="@string/location"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="ifRoom"
            android:checkable="true"/>

        <item
            android:id="@+id/health_switch"
            android:title="@string/health"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always"
            android:checkable="true"/>
    </group>
</menu>