<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/register_ssn"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/register_ssn"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="44dp"
                android:hint="@string/ssn_example_aaa_gg_ssss"
                android:inputType="text"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/register_e_mail"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/register_mail"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="46dp"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/password"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    tools:ignore="Autofill,LabelFor" />

                <ImageView
                    android:id="@+id/password_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/visibility_off_button"
                    android:src="@drawable/ic_visibility_off" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/register_first_name"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/register_first_name"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="46dp"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/register_last_name"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/register_last_name"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="46dp"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/register_birth_date"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_birth_day"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="46dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/date_example_mm_gg_yyyy"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/register_birth_city"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/register_birth_city"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="46dp"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/accept_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:checkMark="@color/cardview_dark_background"/>

                <TextView
                    android:id="@+id/textViewTermAndCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/accept_term_and_condition"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:id="@+id/register_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="-3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/register_button"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>