<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.register.RegisterActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:text="@string/registration_title"
            android:textAlignment="center"
            android:textColor="@color/colorWhite" />
        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#404040"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout2"
        app:tabSelectedTextColor="@color/colorWhite"
        app:tabTextColor="@color/colorWhite">

        <android.support.design.widget.TabItem
            android:id="@+id/toolbar_user_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_toolbar_user" />

        <android.support.design.widget.TabItem
            android:id="@+id/toolbar_business_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_toolbar_third_party" />

        <android.support.design.widget.TabItem
            android:id="@+id/toolbar_company_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_toolbar_company" />

    </android.support.design.widget.TabLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>