<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".request.groupRequest.GroupRequestBodyActivity">

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text=""
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textViewRequestType" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/status"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textViewRequestType"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text=""
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textViewAggregator" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/creation_date"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/aggregatorOperator"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/request_type"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewCreationDate"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text=""
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAggregator"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text=""
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreationDate" />
</android.support.constraint.ConstraintLayout>